--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -13,11 +13,26 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "dotenv": "^8.2.0",
+    "http-status-codes": "^1.4.0",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
+    "koa-generic-session": "^2.0.4",
+    "koa-generic-session-sequelize": "^2.2.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "^8.0.8",
+    "koa-send": "latest",
+    "koa-session": "^5.12.3",
     "koa-static": "^5.0.0",
-    "pino": "^5.16.0"
+    "module-alias": "^2.2.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.0.0",
+    "pg-hstore": "^2.3.3",
+    "pino": "^5.16.0",
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -34,5 +49,10 @@
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@src": "src",
+    "@controllers": "src/controllers"
   }
 }
