--- a/project/package.json
+++ b/project/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "husky": "^3.0.9",
