--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -26,7 +26,8 @@
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
