--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -24,9 +24,13 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
