--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -25,6 +25,7 @@
     "bulma": "^0.8.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
